log
Fri, May  2, 2025 11:00:16 AM: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|8
total_score: 0/70
5729e4d
Fri, May  2, 2025 11:00:46 AM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
6a62ea9
Fri, May  2, 2025 11:19:02 AM: 
 treemap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
Compilation failed
In file included from test.c:4:
treemap.c: In function 'searchTreeMap':
treemap.c:76:8: warning: suggest parentheses around assignment used as truth value [-Wparentheses]
   76 |     if(tree->root = NULL) return NULL;
      |        ^~~~
treemap.c:83:53: error: passing argument 2 of 'tree->lower_than' makes pointer from integer without a cast [-Wint-conversion]
   83 |         if(tree->lower_than(key, current->pair->key < 0)) current = current->left;
      |                                  ~~~~~~~~~~~~~~~~~~~^~~
      |                                                     |
      |                                                     int
treemap.c:83:53: note: expected 'void *' but argument is of type 'int'
test.c: At top level:
test.c:6:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
0529a90
Fri, May  2, 2025 11:20:03 AM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function 'searchTreeMap':
treemap.c:83:53: error: passing argument 2 of 'tree->lower_than' makes pointer from integer without a cast [-Wint-conversion]
   83 |         if(tree->lower_than(key, current->pair->key < 0)) current = current->left;
      |                                  ~~~~~~~~~~~~~~~~~~~^~~
      |                                                     |
      |                                                     int
treemap.c:83:53: note: expected 'void *' but argument is of type 'int'
test.c: At top level:
test.c:6:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
683985a
Fri, May  2, 2025 11:21:45 AM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function 'searchTreeMap':
treemap.c:83:53: error: passing argument 2 of 'tree->lower_than' makes pointer from integer without a cast [-Wint-conversion]
   83 |         if(tree->lower_than(key, current->pair->key < 0)) current = current->left;
      |                                  ~~~~~~~~~~~~~~~~~~~^~~
      |                                                     |
      |                                                     int
treemap.c:83:53: note: expected 'void *' but argument is of type 'int'
test.c: At top level:
test.c:6:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
3489203
Fri, May  2, 2025 11:21:50 AM: 
Compilation failed
In file included from test.c:4:
treemap.c: In function 'searchTreeMap':
treemap.c:83:53: error: passing argument 2 of 'tree->lower_than' makes pointer from integer without a cast [-Wint-conversion]
   83 |         if(tree->lower_than(key, current->pair->key < 0)) current = current->left;
      |                                  ~~~~~~~~~~~~~~~~~~~^~~
      |                                                     |
      |                                                     int
treemap.c:83:53: note: expected 'void *' but argument is of type 'int'
test.c: At top level:
test.c:6:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
8ef012e
Fri, May  2, 2025 11:23:45 AM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|7
total_score: 5/70
6fea547
Fri, May  2, 2025 11:24:39 AM: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  8|7
total_score: 5/70
6e4b7a3
Fri, May  2, 2025 11:27:13 AM: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
3a0b223
Fri, May  2, 2025 11:28:10 AM: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
c9e68f0
Fri, May  2, 2025 11:40:52 AM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|7
total_score: 5/70
fa0f8f1
Fri, May  2, 2025 11:42:29 AM: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function 'searchTreeMap':
treemap.c:89:26: error: returning 'int' from a function with return type 'Pair *' makes pointer from integer without a cast [-Wint-conversion]
   89 |     return current->pair == NULL;
      |                          ^
test.c: At top level:
test.c:6:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
8bc4102
Fri, May  2, 2025 11:42:43 AM: 
Compilation failed
In file included from test.c:4:
treemap.c: In function 'searchTreeMap':
treemap.c:89:26: error: returning 'int' from a function with return type 'Pair *' makes pointer from integer without a cast [-Wint-conversion]
   89 |     return current->pair == NULL;
      |                          ^
test.c: At top level:
test.c:6:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
33f6e95
Fri, May  2, 2025 11:43:01 AM: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
b2aaa5e
Fri, May  2, 2025 11:43:27 AM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function 'searchTreeMap':
treemap.c:89:26: error: returning 'TreeNode *' from a function with incompatible return type 'Pair *' [-Wincompatible-pointer-types]
   89 |     return tree->current = NULL;
      |                          ^
test.c: At top level:
test.c:6:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
1b3dd51
Fri, May  2, 2025 11:43:42 AM: 
Compilation failed
In file included from test.c:4:
treemap.c: In function 'searchTreeMap':
treemap.c:89:26: error: returning 'TreeNode *' from a function with incompatible return type 'Pair *' [-Wincompatible-pointer-types]
   89 |     return tree->current = NULL;
      |                          ^
test.c: At top level:
test.c:6:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
22babd0
